--- a/my_api_key.env
+++ b/my_api_key.env
@@ -1,6 +1,6 @@
 #my api keys 
 
-openai_api = "your_api_key
+openai_api = "your_api_key"
 langsmith_api = "your_langsmith_api_key"
 "LANGCHAIN_TRACING_V2" = "true"
 "LANGCHAIN_ENDPOINT" = "https://api.smith.langchain.com"
